# ppfx

./: CMakeLists.txt  CMakePresets.json  Makefile  setup.sh
data/BINS/: CMakeLists.txt
data/MC/: CMakeLists.txt
data/MC/FTFP/: CMakeLists.txt  pim_FTFP_BERT.root
data/MC/QGSP/: CMakeLists.txt
data/MIPP/: CMakeLists.txt
data/NA49/: CMakeLists.txt
data/SCALING/: CMakeLists.txt
include/: CMakeLists.txt  MakeReweight.h
scripts/: CMakeLists.txt
src/: CMakeLists.txt  doReweight_dk2nu.C  doReweight_dk2nu_original.C
uncertainties/: CMakeLists.txt
ups/: product_deps
