
install( FILES MIPPNumiData_K_PI_Bins.xml
               MIPPNumiData_PIM_Bins.xml
               MIPPNumiData_PIP_Bins.xml
               ThinTargetBarton_pC_pi_Bins.xml
               ThinTarget_K_PI_Bins.xml
               ThinTargetLowxF_pC_k_Bins.xml
               ThinTarget_material_scaling_Bins.xml
               ThinTarget_MesonIncident.xml
               ThinTarget_pC_n_Bins.xml
               ThinTarget_pC_p_Bins.xml
               ThinTarget_pC_pi_Bins.xml
         DESTINATION data/BINS )
