
install( FILES
          invxs_kam_FTFP_BERT.root
          invxs_kap_FTFP_BERT.root
          invxs_klong_FTFP_BERT.root
          invxs_kshort_FTFP_BERT.root
          invxs_pim_FTFP_BERT.root
          invxs_pip_FTFP_BERT.root
          invxs_prt_FTFP_BERT.root
          invxs_qe_corr_prt.root
          neu_FTFP_BERT.root
          prt_FTFP_BERT.root
          qe_corr_neu.root
          qe_corr_nucl.root
          yield_neu_FTFP_BERT.root
          yield_qe_corr_neu.root
         DESTINATION data/MC/FTFP )
